--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img src="receitinhaslogo1.png" alt="logo topo">
-        <ul>
-            <li>Sobre</li>
-            <li>Receitas</li>
+    <header class="cabecalho">
+        <img class="logo-topo" src="receitinhaslogo1.png" alt="logo topo">
+        <ul class="lista-topo">
+            <li class="lista-item-topo">Sobre</li>
+            <li class="lista-item-topo">Receitas</li>
         </ul>
     </header>
 </body>
