corpo do texto sobre

--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="logo-topo" src="receitinhaslogo1.png" alt="logo topo">
+        <img class="logo-topo" src="receitinhaslogo2.png" alt="logo topo">
         <ul class="lista-topo">
             <li class="lista-item-topo">Sobre</li>
             <li class="lista-item-topo">Receitas</li>
         </ul>
     </header>
+    <section class="sobreosite"> 
+        <div class="sobreosite-divisao">
+            <h2 class="sobreosite-titulo">Sobre o Site</h2>
+            <p class="sobreosite-texto-um">Esse site foi criado com a intenção de compartilhar as minhas comidas favoritas e os modos de preparo.</p>
+            <p class="sobreosite-texto-dois">As receitas que vao ser mostradas são todas salgadas, pois não me garanto tanto no doce.</p>
+            <p class="sobreosite-texto-tres">Meu top 3 de receitas é:
+                <li>Strogonoff</li>
+                <li>Hamburger</li>
+                <li>Tirinha de frango</li></p>
+        </div>
+            <img class="sobreosite-imagem" src="imagemcozinha.png" alt="cozinhando">
+    </section>
+
 </body>
 </html>
