--- a/index.html
+++ b/index.html
@@ -28,24 +28,98 @@
                 <li>Strogonoff</li>
                 <li>Hamburger</li>
                 <li>Tirinha de frango</li></p>
-        </div>
+            </div>
             <img class="sobreosite-imagem" src="imagemcozinha.png" alt="cozinhando">
     </section>
-    <section class="Receitas">
-        <h2 class="Receitas-titulo1">Strogonoff</h2>
-        <img class="receitas-img-strog" src="strogonoff.png" alt="Strogo imagem">
-        <h3><p>Ingredientes:</p>
-            <p>2 Peitos de frango cortados em cubos</p>
-            <p>1 Dente de alho picado</p>
-            <p>Sal a gosto</p>
-            <p>1 Cebola picada</p>
-            <p>1 Colher de manteiga</p>
-            <p>Ketchup a gosto </p>
-            <p>Mostarda a gosto</p>
-            <p>1 Creme de leite</p>
-            <p>Batata palha a gosto</p>
-            </h3>
-    </section>
-
+    <section class=”receitas”>
+        <div class="receitaumtitulo">
+        <h2 class=”receitas-titulo”>Receitas</h2>
+        </div>
+        <div class="strogonofftituloum">
+        <h3 class="strogonofftitulo">Strogonoff</h3>
+        </div>
+    <div class="receitaum-todos">
+        <div class="receitas-div"> 
+    <h3 class=”receita-ingredientes”>Ingredientes:</h3>
+<p class="receita-texto-um">2 Peitos de frango cortados em cubos</p>
+<p class="receita-texto-dois">1 Dente de alho picado</p>
+<p class="receita-texto-tres">Sal a gosto</p>
+<p class="receita-texto-quadro">1 Cebola picada</p>
+<p class="receita-texto-cinco">1 Colher de manteiga</p>
+<p class="receita-texto-seis">Ketchup a gosto</p>
+<p class="receita-texto-sete">Mostarda a gosto</p>
+<p class="receita-texto-oito">1 Creme de leite</p>
+<p class="receita-texto-nove">Batata palha a gosto</p>
+        </div>   
+        <img class="receitaum-imagem" src="strogonoff.png" alt="strogonoff imagem">
+        <div class="receitas-div"><h3 class=”receita-modo”>Modo de preparo:</h3>
+<p class="Modo-texto-um">Em uma panela,derreta a manteiga e doure a cebola em seguida coloque o frango, o alho e o sal.</p> 
+<p class="Modo-texto-dois">Quando o frango estiver dourado adicione o creme de leite, a mostarda e o ketchup, e retire a panela do fogo antes de ferver e está pronto.</p>
+<p class="Modo-texto-tres">Sirva com arroz branco e batata palha.</p>
+<p class="Modo-texto-quatro">Obs: Pode usar temperos à vontade, cogumelos, mostarda e molho de tomate.</p>
+        </div>  
+    </div>
+        <div class="tituloreceitadois">
+        <h3 class="receitadois-titulo">Hambúrguer</h3> 
+        </div>
+    <div class="receitadois-todos">
+        <div class="receitas-dois">
+<h3 class=”receitadois-ingredientes”>Ingredientes:</h3> 
+<p class="receitadois-texto-um">500 gramas de carne moída</p>
+<p class="receitadois-texto-dois">1 colher (sopa) de cheiro-verde picado</p>
+<p class="receitadois-texto-tres">1 cebola pequena picada</p>
+<p class="receitadois-texto-quatro">1 ovo</p>
+<p class="receitadois-texto-cinco">Sal</p>
+<p class="receitadois-texto-seis">Óleo</p>
+<p class="receitadois-texto-seis">Queijo</p>
+<p class="receitadois-texto-seis">Pães de hambúrguer </p>
+<p class="receitadois-texto-seis">Alface </p>
+<p class="receitadois-texto-seis">Tomate fatiado em rodelas</p>
+<p class="receitadois-texto-seis">Maionese </p>
+<p class="receitadois-texto-seis">Mostarda </p>
+<p class="receitadois-texto-seis">Ketchup</p>
+        </div>
+        <img class="receitadois-imagem" src="burguer.png" alt="hamburguer">
+        <div class="receitas-dois">
+<h3 class="mododois-titulo-dois">Modo de preparo:</h3>
+<p class="mododois-texto-um">Em uma tigela grande, coloque a carne, o cheiro-verde, a cebola, o ovo e o sal, e amasse bem com as mãos até que fique homogêneo.</p>
+<p class="mododois-texto-dois">Divida em 6 partes iguais e modele cada uma delas no formato de hambúrguer.</p>
+<p class="mododois-texto-tres">Em uma frigideira coloque o óleo e leve ao fogo para aquecer. Frite os hambúrgueres até que dourem.</p>
+<p class="mododois-texto-quatro">Distribua uma fatia de queijo por cima de cada hambúrguer e tampe a frigideira para derreter o queijo.</p>
+<p class="mododois-texto-cinco">Toste os pães com manteiga na frigideira, coloque os hambúrgueres e por cima, coloque as folhas de alface e as rodelas de tomate.</p>
+<p class="mododois-texto-seis">Para o molho, misture maionese, o ketchup e a mostarda até ficar homogêneo e depois colocar por cima do pão e fechar o sanduíche.</p>  
+        </div>
+    </div>
+        <div class="titulo-receitatres">
+            <h3>Tirinhas de frango</h3>
+        </div>
+    <div class="receitatres-todos">    
+        <div class="receitatres">
+<h3 class="receitatres-titulo">Ingredientes:</h3>
+<p class="receitatres-texto-um">1 Peito de frango sem pele e sem osso</p>
+<p class="receitatres-texto-dois">2 Dentes de alho </p>
+<p class="receitatres-texto-tres">1/2 Cebola ralada</p>
+<p class="receitatres-texto-quatro">Orégano</p>
+<p class="receitatres-texto-cinco">Sal a gosto</p>
+<p class="receitatres-texto-seis">Farinha de trigo</p>
+<p class="receitatres-texto-sete">3 Ovos (levemente batidos)</p>
+<p class="receitatres-texto-oito">Farinha de rosca</p>
+<p class="receitatres-texto-nove">Óleo para fritar</p>
+        </div>
+        <img class="tirinhaimagem" src="tirinhas.png" alt="tirinha">
+        <div class="receitatres">
+<h3 class="modotres-titulo">Modo de preparo:</h3>
+<p class="modotres-texto-um">Corte o peito de frango em tiras finas. Tempere com o alho, orégano, sal e cebola ralada.</p>
+<p class="modotres-texto-dois">Deixe por alguns minutos para pegar o gosto dos temperos.</p>
+<p class="modotres-texto-tres">Coloque uma panela ou frigideira com bastante óleo (o suficiente para fritar as tiras de frango sem precisar virá-las) no fogo para que fique bem quente.</p>
+<p class="modotres-texto-quatro">Empane as tiras de frango na sequência: Primeiro no trigo, depois nos ovos levemente batidos e por último na farinha de rosca.</p>
+<p class="modotres-texto-quatro">Coloque para fritar no óleo quente até ficarem douradas. Retire e coloque no papel toalha.</p>
+<p class="modotres-texto-quatro">Sirva em seguida com o molho que preferir.</p>
+        </div>
+    </div>
+</section>
+    <footer class="rodape">
+    <img class="imagem-rodape" src="receitinhaslogo2.png" alt="logorodape">
+    </footer>
 </body>
 </html>
