--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="sobreosite-divisao">
             <h2 class="sobreosite-titulo">Sobre o Site</h2>
             <p class="sobreosite-texto-um">Esse site foi criado com a intenção de compartilhar as minhas comidas favoritas e os modos de preparo.</p>
-            <p class="sobreosite-texto-dois">As receitas que vao ser mostradas são todas salgadas, pois não me garanto tanto no doce.</p>
+            <p class="sobreosite-texto-dois">As receitas que serão mostradas são todas salgadas, pois não me garanto tanto no doce.</p>
             <p class="sobreosite-texto-tres">Meu top 3 de receitas é:
                 <li>Strogonoff</li>
                 <li>Hamburger</li>
